@@ -2,6 +2,7 @@ v0.3.0, ??? -- ???!
  * Changes that (slightly) break compatibility with 0.2.x:
    * ec2_instance_type option now only sets instance type for slave nodes when 
      there are multiple EC2 instances (Issue #66)
+   * job_name_prefix option is gone (was deprecated)
 
 v0.2.4, 2011-03-04 -- fix bootstrapping mrjob
  * Fix bootstrapping of mrjob in hadoop and local mode (Issue #89)
